# platoon

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ty.toml
.claude/: settings.json
.github/workflows/: ci.yml
platoon/: config_defs.py
platoon/agents/: base.py
platoon/agents/actions/: common.py  subagent.py
platoon/agents/appworld/: areal_workflow.py  codeact.py  rollout.py
platoon/agents/codeact/: __init__.py  agent.py  prompt_builder.py
platoon/agents/codeact/prompts/: system.jinja  user-initial.jinja  user-next-action-str.jinja  user-observation.jinja  user.jinja
platoon/agents/countdown/: areal_workflow.py
platoon/agents/number_search/: agent.py  areal_workflow.py  rollout.py
platoon/agents/textcraft/: README.md  __init__.py  areal_workflow.py  rollout.py  test_rollout.py
platoon/analysis/: appworld_metrics.py  compare.py  compute_metrics.py  error_analysis.py
platoon/envs/: base.py
platoon/envs/appworld/: .gitignore  README.md  env.py  server_pool.py
platoon/envs/appworld/prompts/: user-action-space-description.jinja  user-recursive-action-space-description.jinja
platoon/envs/code_issue_localization/: env.py
platoon/envs/codeact/: __init__.py  env.py  rubrics.py  types.py
platoon/envs/countdown/: env.py  eval.py
platoon/envs/number_search/: env.py  number_search_val.jsonl  tasks.py
platoon/envs/openhands/: env.py  types.py
platoon/envs/textcraft/: README.md  __init__.py  env.py  tasks.py  textcraft_val.jsonl
platoon/episode/: context.py  loop.py  trajectory.py
platoon/train/: __init__.py  appworld_custom_reinforce.py  appworld_ppo.py  appworld_ppo.yaml  appworld_reinforce.py  appworld_reinforce.yaml  appworld_reinforce_plus_plus.py  appworld_reinforce_plus_plus.yaml  areal_integration.py  code_issue_localization_reinforce.py  code_issue_localization_reinforce.yaml  code_issue_localization_reinforce_plus_plus.py  code_issue_localization_reinforce_plus_plus.yaml  countdown.yaml  countdown_reinforce.py  number_search_reinforce.py  number_search_reinforce.yaml  proxy.py  rl.py  textcraft_reinforce_plus_plus.py  textcraft_reinforce_plus_plus.yaml
platoon/train/aent/: actor.py  functional.py
platoon/train/areal/: __init__.py  actor.py  config_defs.py  loss_functions.py  patches.py  proxy.py  rl.py
platoon/train/areal/workflows/: __init__.py  step_wise.py
platoon/train/tinker/: __init__.py  config_defs.py  proxy.py  restart_wrapper.py  rl.py
platoon/train/tinker/workflows/: __init__.py  base.py  group_rollout_workflow.py
platoon/train/workflows/: step_wise.py
platoon/utils/: areal_data_processing.py  config.py  ipython_shell.py  llm_client.py  openhands_utils.py  prompt_retriever.py  stats_logger.py  stats_tracker.py  timeout.py  tinker_data_processing.py  train.py
platoon/visualization/: cli.py  compare_tui.py  error_tui.py  event_sinks.py  tui.py
plugins/codegrep/: README.md  pyproject.toml
plugins/codegrep/platoon/codegrep/: codegrep_reinforce_plus_plus.yaml  codegrep_tinker.yaml  env.py  rollout.py  tasks.py  train.py  train_tinker.py
plugins/deepplanning/: .gitignore  pyproject.toml
plugins/deepplanning/platoon/deepplanning/: setup_db.py
plugins/deepplanning/platoon/deepplanning/shoppingplanning/: env.py  executor.py  prompt_builder.py  rollout.py  tasks.py  toolbox.py
plugins/deepplanning/platoon/deepplanning/shoppingplanning/tests/: test_executor.py  test_prompt_builder.py  test_tasks.py  test_toolbox.py
plugins/number-search/: README.md  pyproject.toml
plugins/number-search/platoon/number_search/: agent.py  env.py  number_search_areal.yaml  number_search_reinforce_plus_plus.yaml  number_search_tinker.yaml  rollout.py  tasks.py  train.py  train_tinker.py
plugins/openhands/: pyproject.toml
plugins/openhands/platoon/openhands/: agent.py  env.py  types.py
plugins/textcraft/: pyproject.toml
plugins/textcraft/platoon/textcraft/: README.md  __init__.py  agent.py  env.py  recipe_loader.py  rollout.py  synth_recipe_generator.py  synth_recipe_loader.py  synth_rollout.py  synth_tasks.py  tasks.py  textcraft_areal.yaml  textcraft_reinforce_plus_plus.yaml  textcraft_synth_recursive_tinker.yaml  textcraft_synth_tinker.yaml  textcraft_tinker.yaml  textcraft_train.jsonl  train.py  train_areal.py  train_tinker.py  train_tinker_synth.py  train_tinker_synth_recursive.py  train_workflow.py
src/platoon/: __init__.py
src/platoon/agents/: base.py
src/platoon/agents/actions/: common.py
src/platoon/agents/appworld/: areal_workflow.py  recursive_agent.py  rollout.py
src/platoon/agents/code_issue_localization/: areal_workflow.py  rollout.py
src/platoon/agents/codeact/: __init__.py  agent.py
src/platoon/agents/countdown/: agent.py  rollout.py
src/platoon/agents/number_search/: agent.py
src/platoon/agents/openhands/: agent.py
src/platoon/analysis/: appworld_metrics.py  compute_metrics.py  error_analysis.py
src/platoon/envs/appworld/: __init__.py  env.py  env_server.py
src/platoon/envs/code_issue_localization/: env.py
src/platoon/envs/codeact/: __init__.py  env.py  rubrics.py  types.py
src/platoon/envs/countdown/: env.py  eval.py  tasks.py
src/platoon/envs/number_search/: __init__.py
src/platoon/episode/: context.py  loop.py  trajectory.py
src/platoon/generators/: rollout_generator.py  types.py
src/platoon/train/: appworld_custom_reinforce.py  appworld_custom_reinforce.yaml  appworld_ppo.py  appworld_ppo.yaml  appworld_reinforce.py  appworld_reinforce.yaml  appworld_vanilla_reinforce.yaml  areal_integration.py  backup_areal_data.py  code_issue_localization_reinforce.py  code_issue_localization_reinforce.yaml  code_issue_localization_reinforce_plus_plus.yaml  countdown.yaml  rl.py  rollout_debug.py
src/platoon/train/aent/: actor.py  (+2 more)
src/platoon/utils/: llm_client.py  openhands_utils.py  prompt_retriever.py  train.py
src/platoon/visualization/: README.md  compare_tui.py  error_tui.py  event_sinks.py  tui.py
tests/: test_context_var_in_ipshell.py  test_multi_turn_prompts.py  test_prompts_user_template.py  test_sequence_extension_prompts.py  test_step_budget_tracker.py
(+402 files in other folders)
