[project]
name = "platoon"
version = "0.1.0"
description = "Build and train systems of agents."
authors = [
    {name = "Apurva Gandhi", email = "apurvag@cs.cmu.edu"}
]
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "ai-rubric>=0.2.2",
    "areal[cuda]",
    "ipython>=9.4.0",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "rich>=13.9.4",
    "textual>=5.3.0",
    "notebook>=7.4.4",
    "tenacity",
    "tensordict"
]

[tool.uv]
override-dependencies = [
    "fastapi[standard]>=0.115.0",
    "openai==1.99.6",
    "xgrammar==0.1.24",
    "outlines-core==0.1.26",
    "pyarrow==20.0.0",
    "huggingface_hub==0.34",
    "datasets==4.3.0",
    "networkx==3.3.0" # This can be removed if ai-rubric pins 3.3.0 or areal relaxes the pin.
]
no-build-isolation-package = ['flash-attn']

[tool.uv.sources]
appworld = { git = "https://github.com/stonybrooknlp/appworld" }
areal = { git = "https://github.com/inclusionAI/AReaL.git", rev = "4ae2536474dc2d53a23d8f10cb4e90007906c607" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["platoon"]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.11.9",
]

#appworld = [
#    "appworld"
#]
#openhands = [
#    "openhands-sdk==1.10",
#    "openhands-tools==1.10",
#    "openhands-workspace==1.10",
#    "openhands-agent-server==1.10"
#]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
