[project]
name = "platoon-deepplanning"
version = "0.1.0"
description = "Platoon plugin for the DeepPlanning benchmark."
requires-python = "~=3.12.0"
dependencies = [
  "platoon >= 0.1.0",
  "qwen-agent>=0.0.10",
  "openai>=1.0.0",              
  "dashscope>=1.11.0",                
  "pandas>=1.5.0",              
  "numpy>=1.24.0",                  
  "rank-bm25>=0.2.2",                 
  "requests>=2.28.0",               
  "python-dotenv>=1.0.0",             
  "json5>=0.9.0",           
  "jsonlines>=3.0.0",                 
  "jsonschema>=4.0.0",               
  "pydantic>=2.3.0",              
  "tiktoken>=0.5.0",                
  "eval-type-backport",               
  "pillow>=9.0.0",             
  "tabulate>=0.9.0",                  
]

[project.optional-dependencies]
# tinker = ["platoon[tinker]"]
areal  = ["platoon[areal]"]
wandb  = ["platoon[wandb]"]

[tool.uv]
conflicts = [
  [
    { extra = "tinker" },
    { extra = "areal" },
  ],
]

# Optional: only add this block if your requirements introduce version conflicts.
# (TextCraft had to override some pins.)
override-dependencies = [
  "fastapi[standard]>=0.115.0",
  "openai==1.99.6",
  "xgrammar==0.1.24",
  "outlines-core==0.1.26",
  "pyarrow==20.0.0",
  "huggingface_hub==0.34",
  "datasets==4.3.0",
  "networkx==3.3.0",
]
no-build-isolation-package = ['flash-attn']

[tool.uv.sources]
platoon = { path = "../..", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["platoon"]